# doorman

./: .dockerignore  .gitignore  AI_MEMORY.md  ARCHITECTURE.md  BACKENDS_OVERVIEW.md  BACKEND_STATUS.md  BENCHMARK_SYSTEM.md  BUILD_REQUIREMENTS.txt  CHANGELOG.md  COMMANDS.md  CPU_OPTIMIZATION_SUMMARY.md  Cargo.toml  DOCKER_DEPLOYMENT.md  DOCKER_SOCKET_DEPLOYMENT.md  Dockerfile.test  FINAL_SOLUTION.md  GOOD_MORNING.txt  GPU_MEMORY_ISSUE.md  GPU_SETUP.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  INSTALL_DEPS.sh  IPC_OVERHEAD_ANALYSIS.md  LICENSE  MODELS.md  MORNING_STATUS.md  Makefile  NATIVE_BUILD.md  NATIVE_DEPLOYMENT.md  NATIVE_EXTENSION.md  NIGHT_WORK_SUMMARY.md  NPU_SETUP.md  OBTAINING_LIVENESS_MODEL.md  PREVIEW_BUILD.md  PURE_RUST_SOLUTION.md  QUICKSTART.md  QUICK_START.sh  QUICK_START_MORNING.md  QUICK_TEST.md  README.md  (+58 more)
.cargo/: config.toml
daemon/: Cargo.toml  migraphx_inference.py
daemon/examples/: camera_test.rs  coreml_bench.rs  live_camera_test.rs
daemon/native_ml/: Cargo.toml  README.md  build.rs  build.sh  pyproject.toml
daemon/native_ml/python/doorman_ml/: __init__.py
daemon/native_ml/python/doorman_ml_native/: __init__.py
daemon/native_ml/src/: detector.rs  embedder.rs  lib.rs  liveness.rs
daemon/python/: torch_worker.py
daemon/src/: background_detection.rs  camera.rs  debug_stream.rs  frame_stream.rs  ipc.rs  lib.rs  main.rs  preview.rs  storage.rs  test_pipeline_debug.rs  video.rs
daemon/src/camera/: ffmpeg_backend.rs  gstreamer_backend.rs  mock_backend.rs  mod.rs  opencv_backend.rs  pipewire_backend.rs  pipewire_backend_todo.md  rscam_backend.rs  v4l2_backend.rs  video_backend.rs  video_file_backend.rs
daemon/src/ml/: align.rs  anchors.rs  backend.rs  blazeface_decoder.rs  candle_backend.rs  docker_backend.rs  migraphx_backend.rs  mod.rs  model_config.rs  ort_backend.rs  socket_backend.rs  tch_backend.rs  tests.rs  torch_backend.rs  torch_backend_native.rs  torch_backend_real.rs  torch_docker_backend.rs  torch_inference.py  torch_inference_shm.py  torch_shm_backend.rs  tract_backend.rs  yunet_decoder.rs
daemon/src/pipeline/: aggregate.rs  camera_producer.rs  detection_pipeline.rs  frame_fanout.rs  mod.rs  recognition_pipeline.rs  types.rs
daemon/tests/: config_tests.rs  coordinate_transforms.rs  gstreamer_camera_test.rs  ml_tests.rs  recognition_tests.rs  storage_tests.rs  test_detection_on_frames.rs  yunet_detection.rs
docker/: DEPLOYMENT.md  Dockerfile.cuda  Dockerfile.minimal  Dockerfile.onnx-rocm  README.md  docker-compose.yml  inference_server.py  inference_server_socket.py  test-cuda-container.sh
docs/: CPU_OPTIMIZATION.md  datasets.md
docs/archive/: BBOX_DEBUG.md  CACHE_INFO.md  COORDINATE_FLOW.md  CURRENT_STATUS.md  FIXES_SUMMARY.md  GPU_PERFORMANCE_ANALYSIS.md  GTT_MEMORY_FIX.md  MORNING_REPORT.md  NIGHT_WORK_DONE.md  PW_STREAM_RESEARCH.md  SYSTEM_DIAGNOSTIC.md  WORK_STATUS.md
packaging/: doorman.toml.example
packaging/systemd/: doormand-user.service  doormand.service
pam_module/: Cargo.toml
pam_module/src/: lib.rs
scripts/: arcface_r50_eval.py  download_celeba_spoof.py  download_lccfasd.py  export_edgeface.py  face_eval.py  fetch_models.sh  pad_eval.py  pad_eval_fullframe.py  pad_insitu.py  perf_profile.py  run_container_test.sh  spatial_pad_insitu.py  test_ubuntu.sh  threshold_security_eval.py
shared/: Cargo.toml
shared/src/: config.rs  lib.rs
src/doorman/: __init__.py  __main__.py  cli.py  model_specs.py  models.py  preview.py  preview_ipc.py  test_cli.py
tests/: e2e_test.rs  enrollment_e2e_test.rs  test_models.py  video_tests.rs
tools/: BENCHMARK_README.md  benchmark.py  benchmark_backends.sh  check_doorman.sh  check_gpu_performance.sh  convert_models_to_torchscript.py  convert_to_torchscript.py  convert_torch_direct.py  create_dummy_liveness.py  enable_gtt_memory.sh  inspect_blazeface_model.py  precompile_models.py  profile_fps.sh  quick_blazeface_test.sh  quick_test.sh  run_rocm.sh  run_torch.sh  run_torch_cpu.sh  run_with_gpu.sh  test_blazeface_only.py  test_detection.py  test_shm_backend.sh  torch_models.py  torch_rocm_inference.py  verify_gtt_setup.sh
tools/benchmark_configs/: all_modes.json  ipc_comparison.json  ipc_optimization_comparison.json  native_comparison.json  native_only.json  torch_detection.json
tools/configs/: doorman-candle-rocm.toml  doorman-migraphx.toml  doorman-ort-cpu.toml  doorman-ort-rocm-real.toml  doorman-ort-rocm.toml  doorman-rocm-test.toml  doorman-rocm.toml  doorman-torch-cpu.toml  doorman-torch-native.toml  doorman-torch-rocm.toml  doorman-torch-shm-cpu.toml  doorman-torch-shm.toml  doorman-torch.toml  doorman-video-test-bbox.toml  doorman-video-test.toml  test-migraphx-config.toml
tools/setup/: INSTALL_DEPS.sh  install_onnxruntime_rocm.sh  setup_migraphx.sh  setup_rocm_ort.sh
