[workspace]
resolver = "2"
members = [
    "pam_module",
    "daemon",
    "shared",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["doorman contributors"]

[workspace.dependencies]
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

