[project]
name = "doorman"
version = "0.1.0"
description = "Secure face unlock system for Linux"
requires-python = ">=3.10,<3.13"
dependencies = [
    "typer>=0.15.0",
    "rich>=13.9.0",
    "opencv-python>=4.10.0",
    "numpy>=1.26.0",
    "pillow>=10.0.0",
]

[dependency-groups]
# PyTorch CPU backend dependencies
torch-cpu = [
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "numpy>=1.26.0",
    "pillow>=10.0.0",
    "opencv-python-headless>=4.10.0",
    "posix-ipc>=1.3.2",
]

# PyTorch CUDA backend dependencies
torch-cuda = [
    "torch[cu118]>=2.2.0",
    "torchvision>=0.17.0",
    "numpy>=1.26.0",
    "pillow>=10.0.0",
    "opencv-python-headless>=4.10.0",
]

# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "psutil>=7.1.3",
]
torch = [
    "onnxruntime>=1.23.2",
]

[project.scripts]
doorman = "doorman.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/doorman"]
