[package]
name = "doormand"
version.workspace = true
edition.workspace = true

[[bin]]
name = "doormand"
path = "src/main.rs"

[[bin]]
name = "doorman-preview"
path = "src/preview.rs"
required-features = ["backend-tract", "video"]

[[bin]]
name = "test-pipeline-debug"
path = "src/test_pipeline_debug.rs"

[lib]
name = "doormand"
path = "src/lib.rs"

[dependencies]
doorman-shared = { path = "../shared" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# ML Backends
# Using download feature to get compatible ONNX Runtime version
ort = { version = "2.0.0-rc.10", optional = true, default-features = false, features = ["download-binaries"] }
tract-onnx = { version = "0.22", optional = true }
# torch backend uses Python subprocess, no Rust deps needed
# torch-native backend uses PyO3 for direct calls
pyo3 = { version = "0.22", features = ["auto-initialize"], optional = true }
# Candle backend - pure Rust ML framework with CUDA support
candle-core = { version = "0.9.2-alpha.2", optional = true }
candle-nn = { version = "0.9.2-alpha.2", optional = true }
candle-onnx = { version = "0.9.2-alpha.2", optional = true }
async-trait = "0.1"

# CPU optimizations
rayon = "1.10"  # Parallel processing
ndarray = { version = "0.16", features = ["rayon"] }  # Fast array operations
shared_memory = { version = "0.12", optional = true }  # Shared memory for zero-copy IPC

# MIGraphX backend (ROCm iGPU) - uses Python subprocess
# No additional deps needed, uses system MIGraphX

# Video decoding and GUI
opencv = { version = "0.93", optional = true, default-features = false, features = ["videoio", "highgui", "imgproc"] }

# Camera backends
gstreamer = { version = "0.22", optional = true }
gstreamer-app = { version = "0.22", optional = true }
glib = { version = "0.19", optional = true }
nokhwa = { version = "0.10", features = ["input-native"], optional = true }
rscam = { version = "0.5", optional = true }
pipewire = { version = "0.9", optional = true }
libspa = { version = "0.9", optional = true }
libspa-sys = { version = "0.9", optional = true }
crossbeam = { version = "0.8", optional = true }

# Image processing
image = "0.25"
base64 = "0.22"

# HTTP client for Docker backend
reqwest = { version = "0.12", optional = true, default-features = false, features = ["blocking", "json"] }

# Embedding storage
bincode = "1.3"

# Signal handling
tokio-util = "0.7"
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
futures = "0.3"

# Permissions
nix = { version = "0.29", features = ["user", "fs"] }

# Timestamps
chrono = "0.4"

[features]
default = ["backend-tract", "camera-gstreamer"]
backend-tract = ["tract-onnx"]
backend-ort-cpu = ["ort", "ort/download-binaries"]
backend-ort-rocm = ["ort", "ort/load-dynamic"]
backend-torch = []
backend-torch-native = ["pyo3"]
backend-torch-shm = ["shared_memory"]
backend-migraphx = []
backend-docker = ["reqwest"]
backend-socket = []
backend-candle = ["candle-core", "candle-nn", "candle-onnx"]
backend-candle-cuda = ["backend-candle", "candle-core/cuda"]
camera-gstreamer = ["gstreamer", "gstreamer-app", "glib"]
camera-pipewire = ["pipewire", "libspa", "libspa-sys", "crossbeam"]
camera-v4l2 = ["nokhwa"]
camera-rscam = ["rscam"]
video = ["opencv"]

[dev-dependencies]
tempfile = "3.13"
tokio-test = "0.4"
toml = "0.8"
base64 = "0.21"
approx = "0.5.1"
criterion = { version = "0.5", features = ["async_tokio"] }
