[package]
name = "doormand"
version.workspace = true
edition.workspace = true

[[bin]]
name = "doormand"
path = "src/main.rs"

# Preview GUI window. Gated by the `preview` feature so the default `cargo build`
# (which enables `preview`) produces it, while `--no-default-features` builds skip
# the egui/eframe dependency tree.
[[bin]]
name = "doorman-preview"
path = "src/bin/doorman_preview.rs"
required-features = ["preview"]

# Friendly CLI to manage the daemon over its IPC socket (enroll/list/remove/
# test/status). Pure std + clap client — links no GUI/camera/ML code paths
# beyond the shared protocol crate, so it builds even with --no-default-features.
[[bin]]
name = "doorman"
path = "src/bin/doorman.rs"

[lib]
name = "doormand"
path = "src/lib.rs"

[dependencies]
doorman-shared = { path = "../shared" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = "0.1"
clap = { workspace = true }

# ML backend: ONNX Runtime (ort). The base dependency pulls NO linking strategy;
# each backend feature picks one (see [features]):
#   - backend-ort       -> ort/download-binaries (bundled CPU dylib, zero system deps)
#   - backend-ort-rocm  -> ort/load-dynamic       (dlopen a ROCm libonnxruntime.so)
#   - backend-ort-cuda  -> ort/cuda + download-binaries
# This keeps `download-binaries` and `load-dynamic` from being enabled together
# (which would download a CPU dylib that the ROCm dynamic-load path then ignores).
ort = { version = "2.0.0-rc.10", optional = true, default-features = false }

# CPU array/parallel helpers used by preprocessing
rayon = "1.10"
ndarray = { version = "0.16", features = ["rayon"] }

# Camera backends (Linux-gated except the cross-platform nokhwa webcam dev path)
gstreamer = { version = "0.22", optional = true }
gstreamer-app = { version = "0.22", optional = true }
glib = { version = "0.19", optional = true }
nokhwa = { version = "0.10", features = ["input-native"], optional = true }

# Image processing
image = "0.25"
base64 = "0.22"

# Preview GUI (doorman-preview bin, behind `preview` feature)
eframe = { version = "0.29", optional = true }
egui = { version = "0.29", optional = true }

# Embedding storage
bincode = "1.3"

# Signal handling
tokio-util = "0.7"
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
futures = "0.3"

# Permissions
nix = { version = "0.29", features = ["user", "fs"] }

# Timestamps
chrono = "0.4"

[features]
# Default dev/preview build: CPU ONNX Runtime + cross-platform mock camera +
# the dependency-free ffmpeg live-webcam path. Works on macOS and inside an
# Ubuntu container with no Rust system deps (ffmpeg is an optional runtime CLI;
# the camera layer falls back to mock when it is missing).
default = ["backend-ort", "camera-mock", "camera-ffmpeg", "preview"]

# --- ML backends ---
backend-ort = ["ort", "ort/download-binaries"]           # CPU (bundled ONNX Runtime), all platforms
backend-ort-rocm = ["ort", "ort/load-dynamic"]           # AMD ROCm EP (dlopen libonnxruntime.so), Linux only
backend-ort-cuda = ["ort", "ort/cuda", "ort/download-binaries"] # NVIDIA CUDA EP, Linux only

# --- Camera backends ---
camera-mock = []                                         # video-file / synthetic frames, all platforms
camera-ffmpeg = []                                       # live webcam via ffmpeg CLI (macOS AVFoundation / Linux V4L2)
camera-v4l2 = ["nokhwa"]                                 # V4L2 via nokhwa, Linux only
camera-gstreamer = ["gstreamer", "gstreamer-app", "glib"]# GStreamer/PipeWire, Linux only
camera-nokhwa = ["nokhwa"]                               # native webcam (AVFoundation/MSMF/V4L2)

# --- Preview window (doorman-preview bin, built in M3) ---
preview = ["eframe", "egui"]

# The raw-nokhwa probe example only builds when the nokhwa webcam backend is enabled.
[[example]]
name = "camera_test"
required-features = ["camera-nokhwa"]

[dev-dependencies]
tempfile = "3.13"
tokio-test = "0.4"
approx = "0.5.1"
toml = "0.8"
