[package]
name = "doormand"
version.workspace = true
edition.workspace = true

[[bin]]
name = "doormand"
path = "src/main.rs"

# Preview GUI window. Gated by the `preview` feature so the default `cargo build`
# (which enables `preview`) produces it, while `--no-default-features` builds skip
# the egui/eframe dependency tree.
[[bin]]
name = "doorman-preview"
path = "src/bin/doorman_preview.rs"
required-features = ["preview"]

# Friendly CLI to manage the daemon over its IPC socket (enroll/list/remove/
# test/status). Pure std + clap client — links no GUI/camera/ML code paths
# beyond the shared protocol crate, so it builds even with --no-default-features.
[[bin]]
name = "doorman"
path = "src/bin/doorman.rs"

[lib]
name = "doormand"
path = "src/lib.rs"

[dependencies]
doorman-shared = { path = "../shared" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = "0.1"
clap = { workspace = true }

# ML backend: ONNX Runtime (ort). The base dependency pulls NO linking strategy;
# each backend feature picks one (see [features]):
#   - backend-ort       -> ort/download-binaries (bundled CPU dylib, zero system deps)
#   - backend-ort-rocm  -> ort/load-dynamic       (dlopen a ROCm libonnxruntime.so)
#   - backend-ort-cuda  -> ort/cuda + download-binaries
# This keeps `download-binaries` and `load-dynamic` from being enabled together
# (which would download a CPU dylib that the ROCm dynamic-load path then ignores).
ort = { version = "2.0.0-rc.12", optional = true, default-features = false }

# CPU array/parallel helpers used by preprocessing
rayon = "1.10"
# 0.17 matches what ort 2.0.0-rc.12 depends on (it re-exports ndarray tensor
# conversions); doorman has no direct ndarray usage so this is a unification bump.
ndarray = { version = "0.17", features = ["rayon"] }

# Camera backends (Linux-gated except the cross-platform nokhwa webcam dev path)
gstreamer = { version = "0.22", optional = true }
gstreamer-app = { version = "0.22", optional = true }
glib = { version = "0.19", optional = true }
nokhwa = { version = "0.10", features = ["input-native"], optional = true }

# Image processing
image = "0.25"
base64 = "0.22"

# Preview GUI (doorman-preview bin, behind `preview` feature)
eframe = { version = "0.29", optional = true }
egui = { version = "0.29", optional = true }

# Embedding storage
bincode = "1.3"

# Signal handling
tokio-util = "0.7"
signal-hook = "0.3"
signal-hook-tokio = { version = "0.4", features = ["futures-v0_3"] }
futures = "0.3"

# Permissions
nix = { version = "0.31", features = ["user", "fs"] }

# Timestamps
chrono = "0.4"

[features]
# Default dev/preview build: CPU ONNX Runtime + cross-platform mock camera +
# the dependency-free ffmpeg live-webcam path. Works on macOS and inside an
# Ubuntu container with no Rust system deps (ffmpeg is an optional runtime CLI;
# the camera layer falls back to mock when it is missing).
default = ["backend-ort", "camera-mock", "camera-ffmpeg", "preview"]

# --- ML backends ---
# NOTE: ort 2.0.0-rc.12 split TLS out of `download-binaries` — any feature that
# downloads the bundled ONNX Runtime must now explicitly enable exactly one TLS
# provider, else ort-sys emits a compile_error!. We pick `tls-rustls` (ring) to
# avoid a system OpenSSL dependency, keeping the Ubuntu container / CI builds
# dependency-free as documented below.
backend-ort = ["ort", "ort/download-binaries", "ort/tls-rustls"]           # CPU (bundled ONNX Runtime), all platforms
# `ort/api-24` (ort's own default API level) is required on the load-dynamic path:
# rc.12's always-compiled `ep/vitis.rs` references an `api-18`-gated OrtApi field,
# and `load-dynamic` (disable-linking) does not pull any `api-*` feature in by
# itself, so without this the ort crate fails to compile. The statically-linked
# `download-binaries` path provides the field unconditionally and does not need it.
backend-ort-rocm = ["ort", "ort/load-dynamic", "ort/api-24"]           # AMD ROCm EP (dlopen libonnxruntime.so), Linux only
backend-ort-cuda = ["ort", "ort/cuda", "ort/download-binaries", "ort/tls-rustls", "ort/api-24"] # NVIDIA CUDA EP, Linux only
# Apple-Silicon acceleration: CoreML EP (Neural Engine / GPU / CPU). macOS only.
# The bundled ONNX Runtime from `download-binaries` ships with CoreML support, so
# this just turns on the `ort/coreml` API + on-device registration. Opt-in:
#   cargo build --features backend-ort-coreml
# Enabling `ort/coreml` is a no-op on non-Apple platforms (the EP refuses to
# register via `supported_by_platform()`), so the flag is harmless if mis-set,
# but it is intended for macOS only — Linux uses backend-ort-rocm / -cuda.
# Pulls in `backend-ort` (the full CPU backend module tree + bundled ONNX
# Runtime) and additionally turns on the CoreML EP API, so every
# `#[cfg(feature = "backend-ort")]` code path stays compiled and CoreML is a
# pure add-on with CPU fallback baked in.
backend-ort-coreml = ["backend-ort", "ort/coreml"] # CoreML EP (ANE/GPU/CPU), macOS only

# --- Camera backends ---
camera-mock = []                                         # video-file / synthetic frames, all platforms
camera-ffmpeg = []                                       # live webcam via ffmpeg CLI (macOS AVFoundation / Linux V4L2)
camera-v4l2 = ["nokhwa"]                                 # V4L2 via nokhwa, Linux only
camera-gstreamer = ["gstreamer", "gstreamer-app", "glib"]# GStreamer/PipeWire, Linux only
camera-nokhwa = ["nokhwa"]                               # native webcam (AVFoundation/MSMF/V4L2)

# --- Preview window (doorman-preview bin, built in M3) ---
preview = ["eframe", "egui"]

# The raw-nokhwa probe example only builds when the nokhwa webcam backend is enabled.
[[example]]
name = "camera_test"
required-features = ["camera-nokhwa"]

# CPU vs CoreML benchmark + node-placement report (Apple Silicon).
[[example]]
name = "coreml_bench"
required-features = ["backend-ort-coreml"]

[dev-dependencies]
tempfile = "3.13"
tokio-test = "0.4"
approx = "0.5.1"
toml = "1.0"
