[package]
name = "pam_doorman"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
doorman-shared = { path = "../shared" }
pam = "0.7"
serde_json = { workspace = true }
libc = "0.2"

[profile.release]
opt-level = "z"  # Optimize for size
lto = true       # Link-time optimization
codegen-units = 1
strip = true     # Strip symbols
panic = "abort"  # Smaller binary

