[package]
name = "doorman_ml_native"
version = "0.1.0"
edition = "2021"

[lib]
name = "doorman_ml_native"
crate-type = ["cdylib"]

# Not part of parent workspace
[workspace]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
ort = { version = "2.0.0-rc.7", default-features = false, features = ["half", "load-dynamic"] }
ndarray = "0.16"
image = "0.25"
anyhow = "1.0"
tracing = "0.1"

[build-dependencies]
pyo3-build-config = "0.22"
